feat(dtm) - included call to dtm script

--- a/android-dot-com/index.html
+++ b/android-dot-com/index.html
@@ -50,6 +50,8 @@
     }
     </style>
 
+<script src="//assets.adobedtm.com/8c717b434098baa16315c685ff81572aae207a9b/satelliteLib-e2c07ef8cf6e914da01ab3f779248a645c5961e4-staging.js"></script>
+
   </head>
   <body>
           <!-- Google Tag Manager (noscript) -->
@@ -340,6 +342,6 @@
     <a href="https://github.com/google/material-design-lite/blob/master/templates/android-dot-com/" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">View Source</a>
     <script src="../../material.min.js"></script>
 
-
+    <script type="text/javascript">_satellite.pageBottom();</script>
   </body>
 </html>
