fix(index) - changed url github to vrizieri

--- a/android-dot-com/index.html
+++ b/android-dot-com/index.html
@@ -76,7 +76,7 @@
 			},
 			page: {
 				"secao": "lp",
-				"url": "https://lucassanches.github.io/sandbox/android-dot-com/",
+				"url": "https://vrizieri.github.io/sandbox/android-dot-com/",
 				"nome": "TESTE:LG:ANDROID:android-dot-com",
 				"pagename": "Android",
 				"userID": "123456"
